# closet-ai

./: .gitignore  CLAUDE.md  PLAN.md  PROJECT.md  README.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/ml/: classifier.py  color.py  condition_model.py  condition_vlm.py  gap_model.py
backend/app/models/: __init__.py  item.py  item_action.py  llm_cache.py  outfit_feedback.py  wear_event.py
backend/app/routers/: ai.py  circular.py  health.py  items.py  ml_lab.py  outfits.py  stats.py  wear.py
backend/app/schemas/: __init__.py  ai.py  circular.py  item.py  ml_lab.py  outfit.py  stats.py  wear.py
backend/app/services/: circular.py  coach.py  color_compat.py  condition.py  demo_seed.py  descriptions.py  embeddings.py  gap_analysis.py  ghosts.py  llm.py  recommender.py  repair_tutorials.py  stats.py  tryon.py  weather.py
backend/demo_assets/: ATTRIBUTION.md  wardrobe.json
backend/scripts/: add_exam_speaker_notes.py  benchmark_classifier.py  build_condition_dataset.py  build_exam_notebooks.py  build_ml_notebook.py  build_wardrobe_dataset.py  distill_tutorials.py  fetch_real_garments.py  generate_presentation.py  seed_demo.py  train_condition_model.py  train_condition_vlm_lora.py  train_condition_vlm_pipeline.py  train_gap_model.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_circular.py  test_classifier.py  test_condition_model.py  test_condition_vlm.py  test_demo_seed.py  test_gap_analysis.py  test_health.py  test_items.py  test_ml_lab.py  test_outfits.py  test_reclassify.py  test_wear.py
(+74 files in other folders)
