[project]
name = "closetai-backend"
version = "0.1.0"
description = "ClosetAI backend — FastAPI API per catalogazione capi, wear log, recommender."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
