[project]
name = "closetai-backend"
version = "0.1.0"
description = "ClosetAI backend — FastAPI API per catalogazione capi, wear log, recommender."
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.9",
    "diffusers>=0.37.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "litellm>=1.85.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "safetensors>=0.7.0",
    "sqlalchemy>=2.0.49",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "python-pptx>=1.0.2",
    "ruff>=0.15.14",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
